# safe-mmio

./: AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: example.rs
src/: aarch64_mmio.rs  custom_mmio.rs  fields.rs  lib.rs  physical.rs  volatile_mmio.rs
src/backend/: aarch64_mmio.rs  custom_mmio.rs  mmio_ops.rs  mod.rs  volatile_mmio.rs
tests/: custom_mmio.rs
