[package]
name = "safe-mmio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Types for safe MMIO device access, especially in systems with an MMU."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/safe-mmio"
keywords = ["mmio"]
categories = ["embedded", "no-std"]

[dependencies]
zerocopy = "0.8.18"
