[package]
name = "safe-mmio"
version = "0.2.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Types for safe MMIO device access, especially in systems with an MMU."
authors = ["Andrew Walbran <qwandor@google.com>"]
repository = "https://github.com/google/safe-mmio"
keywords = ["mmio"]
categories = ["embedded", "no-std"]
rust-version = "1.85"

[dependencies]
zerocopy = { version = "0.8.31", features = ["derive"] }
